k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: motherstream
  labels:
    name: motherstream
