k8s/base/rtmp-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller-tcp
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer
  ports:
  - name: rtmp
    port: 1936
    targetPort: 1936
    protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
